implementation des tests sur les services